Skill section mobile layout fix

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -218,72 +218,33 @@ input, select, textarea {
 		width: 1400px;
 	}
 
-		@media screen and (min-width: 961px) and (max-width: 1880px) {
-
-			.container {
-				width: 1200px;
-			}
-
-		}
-
-		@media screen and (min-width: 961px) and (max-width: 1620px) {
-
-			.container {
-				width: 960px;
-			}
-
-		}
-
-		@media screen and (min-width: 961px) and (max-width: 1320px) {
-
-			.container {
-				width: 100%;
-			}
-
-		}
-
-		@media screen and (max-width: 960px) {
-
-			.container {
-				width: 100%;
-			}
-
-		}
-
-		@media screen and (max-width: 736px) {
-
-			.container {
-				width: 100%;
-			}
-
-		}
 
 /* Images for skill section*/
-		.skill-box{
-			padding: 0.25rem;
-		}
+.skill-box {
+	padding: 0.25rem;
+}
 
-		.skill-title{
-			display: flex;
-			flex-direction: column;
-			align-items: center;
-			padding: 0.25rem;
-		}
+.skill-title {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	padding: 0.25rem;
+}
 
-		.img-skill{
-			width: 120px;
-			height: 120px;
-			justify-content: center;
-			align-items: center;
-			position: relative;
-			border-radius: 120px;
-			display: flex;
-		}
+.img-skill {
+	width: 120px;
+	height: 120px;
+	justify-content: center;
+	align-items: center;
+	position: relative;
+	border-radius: 120px;
+	display: flex;
+}
 
-		.skill-icon{
-			width: 100px;
-			justify-items: center;
-		}
+.skill-icon {
+	width: 100px;
+	justify-items: center;
+}
 
 /* Container2 */
 
@@ -299,6 +260,52 @@ input, select, textarea {
 	padding-right: 100px;
 	width: 1400px;
 }
+
+		@media screen and (min-width: 961px) and (max-width: 1880px) {
+
+			.container {
+				width: 1200px;
+			}
+		}
+
+		@media screen and (min-width: 961px) and (max-width: 1620px) {
+
+			.container {
+				width: 960px;
+			}
+		}
+
+		@media screen and (min-width: 961px) and (max-width: 1320px) {
+
+			.container {
+				width: 100%;
+			}
+		}
+
+		@media screen and (max-width: 960px) {
+
+			.container {
+				width: 100%;
+			}
+			.container2 {
+				grid-template-columns: repeat(2, 1fr);
+				padding: 2rem 50px;
+			}
+
+		}
+
+		@media screen and (max-width: 736px) {
+
+			.container {
+				width: 100%;
+			}
+			.container2 {
+				grid-template-columns: repeat(2, 1fr);
+				padding: 2rem 50px;
+			}
+
+		}
+
 
 /* Row */
 
